Fix logo alignment

--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,8 @@
   width: 100%;
   box-sizing: border-box;
 
-  padding: 0 32px;
+    padding-left: 16px;
+  padding-right: 32px;
 
   display: flex;
   align-items: center;
